project/logs/20250529_232900.log
Hello,DirectX!

clientSize:1280,720

Use Adapater:NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel : 12.2

Complete create D3D12Device!!!

Begin CompileShader,path:Object3d.VS.hlsl,prefile:vs_6_0

Object3d.VS.hlsl:21:27: error: use of undeclared identifier 'input'
    output.position = mul(input.position, gTransformationMatrix.WVP);
                          ^

